# aps-design-chatbot-examples

./: .bedrock_agentcore.yaml  .gitignore  Dockerfile  LICENSE.md  README.md  SYSTEM_PROMPT.md  app.py
acc-model-props-assistant/: README.md  requirements.txt  server.py
acc-model-props-assistant/agents/: MPQL.md  SYSTEM_PROMPTS.md  __init__.py  (+1 more)
aec-data-model-assistant/: README.md  requirements.txt  server.py
aps-model-derivs-assistant/: README.md  app.py  propdb.py  pyproject.toml  requirements.txt
aps-model-derivs-assistant/agents/: sqlite_agent.py
aps-model-derivs-assistant/src/: agent.py  propdb.py
aps-model-derivs-assistant/www/: chatbot.js
autodesk-agents-unified/: .env.example  .gitignore  AWS_OPENSEARCH_INTEGRATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_STATUS.md  FINAL_SYSTEM_TESTING_SUMMARY.md  README.md  deploy.py  docker-compose.prod.yml  docker-compose.yml  enhanced_test_server.py  main.py  nginx.conf  requirements.txt  run_integration_tests.py  server.py  server_dev.py  setup_environment.py  simple_server.py  start_demo.py  test_aec_data_model_agent.py  test_aec_data_model_agent_no_opensearch.py  test_agentcore.py  test_all_agents.py  test_aws_opensearch_integration.py  test_base_agent.py  test_model_derivatives_agent.py  test_model_properties_agent.py  test_strands.py  validate_deployment.py  verify_deployment.py  web_interface.html
scripts/: create_agentcore_memory.py
src/: agent.py  config.py  memory.py  propdb.py  props.py
ssa-example/: README.md  main.py  requirements.txt
www/: config.js
(+122 files in other folders)
